--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,108 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+@import url('https://fonts.googleapis.com/css?family=Quicksand');
+
+
+.NewsList{
+  padding: 3%;
+}
+.news-preview{
+  /* display: flex;
+  flex-direction: column; */
+  height: 20%;
+  width:50%;
+  /* border: 5px solid black; */
+  margin-bottom: 0.5%;
+  margin-top:0.5%;
+  margin: auto;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  padding: 2%;
+  /* justify-content: flex-start; */
+  
+}
+.news-preview h2{
+margin-top: 0.5%;
+  color: Black;
+}
+.news-preview p{
+  color: #7F8487;
+  margin :0;
+}
+
+.news-preview img{
+
+  height:20%;
+   width:90%;
+   margin-left: 3%;
+ }
+
+
+.news-details-d{
+  margin-left:25%;
+  margin-right:25%;
+  margin-top:3%;
+  
+  padding: 2%;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  
+  
+}
+.news-details-d h2{
+ justify-content: center;
+ align-items: center;
+}
+
+
+
+header {
+  background-color:#00d084;
+  
+  height:5vh;
+ 
+  padding: 2px 4px;
+  box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.3);
+}
+
+header > h2 {
+  
+ margin-top: 2px;
+ margin-left: 10px;
+  font-weight: 400;
+
+}
+footer {
+  position: absolute;
+  text-align: center;
+  bottom: -15;
+  width: 100%;
+  height: 2.5rem;
+}
+
+footer p {
+  color: #7bdcb5;
+}
+ 
+
+.news-details-d img{
+  height:20%;
+  width:90%;
+  margin-left: 3%;
+}
+.news-details-d div{
+  line-height:26pt;
+}
+.NotFound{
+  margin-left:45.5%;
+  margin-top:15%;
+  padding-bottom: 17%;
+}
+@media (max-width:601px){
+  .news-details-d{
+    width: 100%;
+    margin:auto;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+    
+  }
+}
